--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,11 +14,11 @@
     <header>
         <h1>J.Piornedo</h1>
         <nav >
-            <a href="https://www.linkedin.com/in/joao-piornedo-886803311/"></a><img src="../img/Linkedin.png" alt="Linkedin"></a>
+            <a href="https://www.linkedin.com/in/joao-piornedo-886803311/" target="_blank"><img src="../img/Linkedin.png" alt="Linkedin"></a>
 
-            <a href="https://github.com/JoaoPiornedo"></a><img src="../img/Github.png" alt="Github"></a>
+            <a href="https://github.com/JoaoPiornedo" target="_blank"><img src="../img/Github.png" alt="Github"></a>
 
-            <a href="https://www.instagram.com/joaop.codes?igsh=MWhwbHo3eGI0Ymw4aQ%3D%3D&utm_source=qr"></a><img src="../img/instagram.png" alt="Instagram"></a>
+            <a href="https://www.instagram.com/joaop.codes?igsh=MWhwbHo3eGI0Ymw4aQ%3D%3D&utm_source=qr" target="_blank"><img src="../img/instagram.png" alt="Instagram"></a>
         </nav>
     </header>
 
