--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsive.css">
 </head>
 
 <body>
@@ -14,11 +14,11 @@
     <header>
         <h1>J.Piornedo</h1>
         <nav >
-            <a href="https://www.linkedin.com/in/joao-piornedo-886803311/" target="_blank"><img src="../img/Linkedin.png" alt="Linkedin"></a>
+            <a href="https://www.linkedin.com/in/joao-piornedo-886803311/" target="_blank"><img src="src/img/Linkedin.png" alt="Linkedin"></a>
 
-            <a href="https://github.com/JoaoPiornedo" target="_blank"><img src="../img/Github.png" alt="Github"></a>
+            <a href="https://github.com/JoaoPiornedo" target="_blank"><img src="src/img/Github.png" alt="Github"></a>
 
-            <a href="https://www.instagram.com/joaop.codes?igsh=MWhwbHo3eGI0Ymw4aQ%3D%3D&utm_source=qr" target="_blank"><img src="../img/instagram.png" alt="Instagram"></a>
+            <a href="https://www.instagram.com/joaop.codes?igsh=MWhwbHo3eGI0Ymw4aQ%3D%3D&utm_source=qr" target="_blank"><img src="src/img/instagram.png" alt="Instagram"></a>
         </nav>
     </header>
 
@@ -34,15 +34,15 @@
                 habilidades.</p>
         </div>
         <picture class="photo">
-            <img src="../img/portrait.png" alt="">
+            <img src="src/img/portrait.png" alt="">
     </main>
 
     <footer>
         <h2>Tecnologias:</h2>
-        <img src="../img/python.png" alt="">
-        <img src="../img/html.png" alt="">
-        <img src="../img/css-3.png" alt="">
-        <img src="../img/script-java.png" alt="">
+        <img src="src/img/python.png" alt="">
+        <img src="src/img/html.png" alt="">
+        <img src="src/img/css-3.png" alt="">
+        <img src="src/img/script-java.png" alt="">
     </footer>
 
 </body>
